# HarborMind-NPC

./: .gitignore  README.md  logs_sft_27b_4gpu.txt  logs_sft_smoke.txt  pyproject.toml  sweep_benchmark.py
configs/axolotl/: qwen3_32b_npc_qlora.yml  qwen3_8b_npc_qlora_smoke.yml
configs/llamafactory/: qwen3_4b_npc_orpo_export.yaml  qwen3_4b_npc_orpo_lora.yaml  qwen3_4b_npc_sft_export.yaml  qwen3_4b_npc_sft_lora.yaml  qwen3_5_27b_npc_sft_export.yaml  qwen3_5_27b_npc_sft_qlora.yaml  qwen3_5_4b_npc_sft_smoke.yaml  qwen3_5_9b_npc_sft_smoke.yaml  qwen3_8b_npc_orpo_export.yaml  qwen3_8b_npc_orpo_lora.yaml  qwen3_8b_npc_sft_lora.yaml
configs/sglang/: models.yml
configs/slime/: qwen3_32b_npc_grpo.sh  qwen3_5_27b_npc_grpo.sh  qwen3_5_9b_npc_grpo_smoke.sh  qwen3_8b_npc_grpo_smoke.sh
configs/verl/: qwen3_5_27b_npc_grpo_lora.yaml
configs/vllm/: models.yml
data/: dataset_info.json  raw_manifest.json
data/eval/: eval_cases.jsonl
data/llamafactory/: npc_sft_valid.json
data/rl/verl/: grpo_smoke_100.parquet  grpo_train.parquet
data/worlds/kisaragi_harbor/: demo_cases.jsonl  world.json
scripts/: benchmark_openai.py  benchmark_vllm.py  build_eval_suite.py  build_kisaragi_demo_cases.py  build_product_data.py  check_env.py  compare_sglang_eval.py  demo.sh  download_data.py  export_sft.sh  generate_report.py  local_smoke_test.py  prepare_slime_data.py  prepare_verl_grpo_data.py  repair_qwen35_merged.py  run_agent_demo.py  run_grpo.sh  run_judge_eval.py  run_model_eval.py  run_playthrough_eval.py  run_reward_server.sh  run_sft.sh  run_sglang_eval.py  run_slime_train.sh  run_verl_grpo.sh  serve_demo_api.sh  serve_model_sglang.sh  serve_sglang.sh  serve_vllm.sh  stage_sglang_models.sh  validate_jsonl.py  validate_lm_eval_task.py  verify_live_demo.py
src/: sitecustomize.py
src/game_npc_llm/: __init__.py
src/game_npc_llm/agent/: __init__.py  quest_agent.py
src/game_npc_llm/data/: converters.py  io.py  prompts.py  registry.py  schemas.py
src/game_npc_llm/eval/: judge.py  metrics.py
src/game_npc_llm/eval/tasks/: __init__.py  game_npc_bench.py
src/game_npc_llm/product/: __init__.py  agent.py  memory.py  models.py  policy.py  server.py  world.py
src/game_npc_llm/rewards/: __init__.py  judge.py  server.py  slime_rm.py  verifier.py  verl_reward.py
src/game_npc_llm/serving/: sglang_args.py  vllm_args.py
tests/: test_agent.py  test_eval_metrics.py  test_product_agent.py  test_product_data.py  test_rewards.py  test_schemas.py
