[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-npc-llm"
version = "0.1.0"
description = "Post-training pipeline for game NPC LLMs using LIGHT and NPC-Dialogue_v2."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "huggingface-hub>=0.23.0",
  "openai>=1.30.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
]
train = [
  "bitsandbytes>=0.49.1",
  "datasets>=2.18.0",
  "llamafactory @ git+https://github.com/hiyouga/LLaMA-Factory.git@6b9df75ab9823d69c8c66a309389350585fbe728",
  "safetensors>=0.4.3",
]
serve = [
  "fastapi>=0.111.0",
  "ninja>=1.11.1",
  "safetensors>=0.4.3",
  "sglang[all]>=0.4.6.post1",
  "tqdm>=4.66.0",
  "uvicorn>=0.30.0",
]
rl = [
  "datasets>=2.18.0",
  "pyarrow>=15.0.0",
  "verl>=0.5.0",
]
eval = [
  "lm-eval>=0.4.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
