[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-npc-llm"
version = "0.1.0"
description = "Product-oriented NPC LLM pipeline with public roleplay data, alignment, memory, and FastAPI demo."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "huggingface-hub>=0.23.0",
  "openai>=1.30.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
]
train = [
  "bitsandbytes>=0.49.1",
  "datasets>=2.18.0",
  "llamafactory @ git+https://github.com/hiyouga/LLaMA-Factory.git@6b9df75ab9823d69c8c66a309389350585fbe728",
  "safetensors>=0.4.3",
]
serve = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]
rl = [
  "trl>=0.24.0",
  "vllm>=0.8.0",
]
eval = [
  "deepeval>=3.0.0",
]
memory = [
  "chromadb>=0.5.0",
  "faiss-cpu>=1.8.0",
  "sentence-transformers>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"game_npc_llm.product" = ["static/*.png", "static/*.svg"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402", "E501"]
"src/game_npc_llm/product/server.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
